@@ -1,3 +1,3 @@
-SUBDIRS = gnome demos
+SUBDIRS = gnome demos doc
 
 EXTRA_DIST = ChangeLog NEWS README AUTHORS $(wildcard *.ac)
